assets/css/calc.css
/*-- GENERAL TAGS --*/

html {
	width: 100%;
	height: 100%;
	overflow: hidden;
}

body {
	padding: 0;
	margin: 0;
	width: 100%;
	min-height: 100vh;
	background-color: #2c3e50;
	color: rgba(255, 255, 255, .5);
	font-family: 'Product Sans', sans-serif;
	font-size: 1em;
	font-weight: 400;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

h1,
h2,
h3,
h4,
h5 {
	margin: 0;
}

a,
a:hover,
a:visited {
	color: rgba(255, 255, 255, .5);
	text-decoration: none;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

::-webkit-input-placeholder {
	color: #ddd;
}

::-moz-placeholder {
	color: #ddd;
}

:-moz-placeholder {
	color: #ddd;
}

:-ms-input-placeholder {
	color: #ddd;
}

/*-- MAIN TAGS --*/

/* overlay error */

#overlay_error {
	padding: 0;
	margin: 0;
	width: 100%;
	height: 100vh;
	position: fixed;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	background-color: #212121;
	color: white;
	font-family: 'Roboto', sans-serif;
	font-size: 1em;
	font-weight: 400;
	z-index: 1;
	display: none;
}

#overlay_error .overlay_body {
	width: 500px;
	height: 150px;
	position: absolute;
	top: 50%;
	right: 50%;
	margin-top: -75px;
	margin-right: -250px;
	z-index: 3;
}

#overlay_error .overlay_body h1 {
	text-align: center;
	text-transform: uppercase;
	cursor: default;
	line-height: 1;
}

#overlay_error .overlay_body h2 {
	margin-top: 8px;
	text-align: center;
	text-transform: uppercase;
	font-weight: 400;
	color: #e9e9e9;
}

.main {
	width: 1500px;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

/* prices block */

main h1 {
	width: 1000px;
}

main .prices {
	display: flex;
	justify-content: center;
}

main .prices .hr {
	width: 1px;
	height: 10px;
	background-color: rgba(255, 255, 255, .9);
}

main .prices h2 {
	font-size: 2em;
	font-weight: 400;
	color: rgba(255, 255, 255, .4);
	line-height: 1.5;
	cursor: default;
	margin: 0 20px;
}

main .prices h2 #percent_bitcoin,
main .prices h2 #percent_rub {
	font-size: 0.3em;
	position: absolute;
}

main .prices .green {
	color: #2ECC71;
}

main .prices .red {
	color: #EF4836;
}

/* converter block */

main .input {
	border: 0;
	border-radius: 3px;
	outline: none;
	padding: 10px 15px;
	font-size: 1.4em;
	background-color: #233140;
	color: #eee;
	font-family: 'Product Sans';
}

main .disabled {
	cursor: default;
	opacity: 0.75;
}

main .to_change {
	width: auto;
	height: 46px;
	margin: 5px 0px;
	display: flex;
	align-items: center;
}

/*-- FOOTER TAGS --*/

footer {
	position: absolute;
	bottom: 0;
	right: 0;
	left: 0;
	width: 100%;
	height: auto;
	background-color: #233140;
	color: #eee;
}

footer a {
	color: #eee;
	border-bottom: 1px dotted white;
	transition: all 500ms;
}

.footer {
	width: 1500px;
	margin: 30px auto;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

/*-- MOBILE OPTIMIZATIONS --*/

@media screen and (max-width: 1600px) {
	.main,
	.footer {
		width: 80%;
		height: auto;
	}
	.main {
		flex-direction: column;
		justify-content: center;
	}
	main h1 {
		margin-bottom: 0.2em;
	}
	main .prices {
		text-align: center;
	}

	main,
	aside {
		margin: 5px 0px;
	}

}

@media screen and (max-width: 800px) {
	main,
	.footer {
		width: 90%;
	}
	main .prices h2 {
		font-size: 1.5em;
	}
	main #percent_bitcoin,
	main #percent_rub {
		font-size: 0.4em;
	}
	main .input {
		width: 50%;
		font-size: .9em;
		padding: 10px 8px;
	}
}

@media screen and (max-width: 500px) {
	main .prices {
		flex-direction: column;
		margin: 10px 0;
	}
	main .to_change {
		margin: -15px 0;
	}
	main .to_change .input {
		padding: 5px 10px;
	}
	.footer {
		margin: 15px auto;
	}
	.footer .author {
		display: none;
	}
	footer {
		font-size: .9em;
	}
}

@media screen and (max-width: 320px) {
	footer {
		font-size: .8em;
	}
}

